bug fixes: title wrap around, keyword validation

--- a/istopics/css/istopics.css
+++ b/istopics/css/istopics.css
@@ -35,3 +35,10 @@ height: 4em;
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
+
+/*
+* Make button text wrap around (mainly for project titles)
+*/
+.btn {
+    white-space: normal;
+}
